fixed font size on mobile

--- a/style.scss
+++ b/style.scss
@@ -139,7 +139,7 @@ header {
       }
       .message {
         text-align: right;
-        font-size: 12px;
+        font-size: 15px;
         margin: 0;
         width: 70%;
         font-weight: bold;
